@@ -115,6 +115,13 @@
             <artifactId>freemarker</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javaee</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>5</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -150,6 +157,43 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>web</id>
+            <build>
+                <defaultGoal>org.codehaus.mojo:exec-maven-plugin:exec</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <executable>java</executable>
+                            <mainClass>com.sharepast.Bootstrap</mainClass>
+                            <includeProjectDependencies>true</includeProjectDependencies>
+                            <includePluginDependencies>false</includePluginDependencies>
+                            <classpathScope>runtime</classpathScope>
+                            <arguments>
+                                <argument>-Xms256m</argument>
+                                <argument>-Xmx1024m</argument>
+                                <argument>-Djava.awt.headless=true</argument>
+                                <argument>-XX:MaxPermSize=256m</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>com.sharepast.Bootstrap</argument>
+                                <argument>--platform</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>runner-jms</id>
             <build>
